gcc/testsuite/rust/rustc/ui/match/match-vec-mismatch-2.rs
fn main() {
    match () {
        [()] => { }
// { dg-error ".E0529." "" { target *-*-* } .-1 }
    }
}

